==> ElomedInd/STM32F373-Temperatura/Src/Adafruit_BMP280.cpp <==
#include <stm32f3xx_hal.h>
#include <stm32f3xx_hal_i2c.h>
#include <stm32f3xx_hal_i2c_ex.h>
#include <wwdg.h>
#include "i2c.h"
#include "math.h"
#include <string.h>
#include "Adafruit_BMP280.h"

bool Adafruit_BMP280::begin(uint8_t addr, uint8_t chipid) {
  _i2caddr = addr<<1;
/*
  if (_cs == -1) {
    // i2c
    _wire->begin();
  } else {
    digitalWrite(_cs, HIGH);
    pinMode(_cs, OUTPUT);

    if (_sck == -1) {
      // hardware SPI
      _spi->begin();
    } else {
      // software SPI
      pinMode(_sck, OUTPUT);
      pinMode(_mosi, OUTPUT);
      pinMode(_miso, INPUT);
    }  
  }
*/
  if (read8(BMP280_REGISTER_CHIPID) != chipid)
    return false;

  readCoefficients();
  // write8(BMP280_REGISTER_CONTROL, 0x3F); /* needed? */
  setSampling();
  //HAL_Delay(100);
  for(int i =0;i<10;i++)
  {
    HAL_Delay(10);
    HAL_WWDG_Refresh(&hwwdg);
  }
  return true;
}

void Adafruit_BMP280::write8(byte reg, byte value) {
  //if (_cs == -1) {
    uint8_t buf[2] = {reg,value};
    HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,buf,2,-1);
    /*
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->write((uint8_t)value);
    _wire->endTransmission();
    */
  /*} else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg & ~0x80); // write, bit 7 low
    spixfer(value);
    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }*/
}

uint8_t Adafruit_BMP280::read8(byte reg) {
  uint8_t value;

  //if (_cs == -1) {
    HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,&reg,1,-1);
    HAL_I2C_Master_Receive(&hi2c1,_i2caddr,&value,1,-1);
    /*
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->endTransmission();
    _wire->requestFrom((uint8_t)_i2caddr, (byte)1);
    value = _wire->read();
    */

  /*} else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg | 0x80); // read, bit 7 high
    value = spixfer(0);
    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }*/
  return value;
}

bool Adafruit_BMP280_Temp::getEvent(sensors_event_t *event) {
  /* Clear the event */
  memset(event, 0, sizeof(sensors_event_t));

  event->version = sizeof(sensors_event_t);
  event->sensor_id = _sensorID;
  event->type = SENSOR_TYPE_AMBIENT_TEMPERATURE;
  event->timestamp = HAL_GetTick();//millis();
  event->temperature = _theBMP280->readTemperature();
  return true;
}

bool Adafruit_BMP280_Pressure::getEvent(sensors_event_t *event) {
  /* Clear the event */
  memset(event, 0, sizeof(sensors_event_t));

  event->version = sizeof(sensors_event_t);
  event->sensor_id = _sensorID;
  event->type = SENSOR_TYPE_PRESSURE;
  event->timestamp = HAL_GetTick();//millis();
  event->pressure = _theBMP280->readPressure() / 100; // convert Pa to hPa
  return true;
}
