==> lpender3672/drone/drone/Adafruit_BMP280.cpp <==
#include "Adafruit_BMP280.h"
#define NAN 0xff;

bool Adafruit_BMP280::begin(uint8_t addr, uint8_t chipid) {

  _i2c_address = addr;

  // check if sensor, i.e. the chip ID is correct
  _sensorID = read8(BMP280_REGISTER_CHIPID);
  if (_sensorID != chipid)
    return false;

  readCoefficients();
  // write8(BMP280_REGISTER_CONTROL, 0x3F); /* needed? */
  setSampling();
  sleep_ms(100);
  return true;
}

void Adafruit_BMP280::write8(uint8_t reg, uint8_t value) {
  uint8_t buffer[2] = {(uint8_t)reg, (uint8_t)value};
  i2c_write_blocking(i2c_dev, _i2c_address, buffer, 2, false);

}

uint8_t Adafruit_BMP280::read8(uint8_t reg) {
  uint8_t buffer[1];
  int num_uint8_ts_read = 0;
  uint8_t reg_addr = (uint8_t)reg;

  i2c_write_blocking(i2c_dev, _i2c_address, &reg_addr, 1, true);
  num_uint8_ts_read = i2c_read_blocking(i2c_dev, _i2c_address, buffer, 1, false);

  if (num_uint8_ts_read != 1) {
    return 0;
  }

  return (uint8_t)buffer[0];
}

bool Adafruit_BMP280_Temp::getEvent(sensors_event_t *event) {
  /* Clear the event */
  memset(event, 0, sizeof(sensors_event_t));

  event->version = sizeof(sensors_event_t);
  event->sensor_id = _sensorID;
  event->type = SENSOR_TYPE_AMBIENT_TEMPERATURE;
  event->timestamp = to_ms_since_boot(get_absolute_time());
  event->temperature = _theBMP280->readTemperature();
  return true;
}

bool Adafruit_BMP280_Pressure::getEvent(sensors_event_t *event) {
  /* Clear the event */
  memset(event, 0, sizeof(sensors_event_t));

  event->version = sizeof(sensors_event_t);
  event->sensor_id = _sensorID;
  event->type = SENSOR_TYPE_PRESSURE;
  event->timestamp = to_ms_since_boot(get_absolute_time());
  event->pressure = _theBMP280->readPressure() / 100; // convert Pa to hPa
  return true;
}
